--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,17 +1,17 @@
 .stripe.reverse
   .row
-    .large-12.columns
-      %h2
+    .columns
+      %h1
         = @course.title
-        %br
-        %small #{humanize_date_with_time(@course.date_and_time)}
+      .h3.subheader #{humanize_date_with_time(@course.date_and_time)}
       - if @course.date_and_time.past?
         %label.label.warning This event has already taken place.
+
 
 .stripe.reverse
   .row
     .large-12.columns
-      %h5= @course.short_description
+      %p.h5= @course.short_description
       %p= dot_markdown(@course.description)
 
       - if @course.url
@@ -29,8 +29,7 @@
 .stripe.reverse
   .row
     .large-12.columns
-      .text-center
-        %h3 Tutors
+      %h3 Tutors
       %br
       %br
       %ul.small-block-grid-1.medium-block-grid-2.large-block-grid-2
@@ -49,15 +48,15 @@
 .stripe.reverse
   .row
     .large-8.columns
-      %h4 Venue
+      %h2 Venue
       %p
         %strong= @course.venue.name
         %br
           = @host_address.to_html
       %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-      = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+      = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}
     .large-4.columns
-      %h4 Sponsors
+      %h2 Sponsors
       %ul.no-bullet
         - @course.sponsors.each do |sponsor|
           %li
