remove dasjed border on gravatar thumbnails

--- a/app/views/coach/_coach.html.haml
+++ b/app/views/coach/_coach.html.haml
@@ -6,7 +6,7 @@
           %li.coach
             .row
               .small-2.columns
-                =link_to twitter_url_for(coach.twitter) do
+                =link_to twitter_url_for(coach.twitter), class: 'user-link' do
                   =image_tag coach.avatar(96), class: 'th radius', title: coach.full_name
 
               .small-10.columns
@@ -14,7 +14,7 @@
                   = coach.full_name
                 %p= coach.about_you
                 - if coach.skills.any?
-                  %p 
-                    skills: 
+                  %p
+                    skills:
                     - coach.skills.each do |skill|
                       = link_to skill.name, skill_url(skill.name), class: "skill"
