--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -26,7 +26,7 @@
           - if event.organisers.any?
             .organisers
               - event.organisers.each do |organiser|
-                =link_to twitter_url_for(organiser.twitter) do
+                =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
                   =image_tag organiser.avatar(26), class: 'th radius', title: organiser.full_name
         .medium-6.columns#sponsors
           - if event.sponsors.any?
