--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -95,7 +95,7 @@
           %ul.small-block-grid-2.medium-block-grid-4
             - @event.verified_coaches.each do |coach|
               %li.text-center
-                =link_to twitter_url_for(coach.twitter) do
+                =link_to twitter_url_for(coach.twitter), class: 'user-link' do
                   =image_tag coach.avatar(56), class: 'th radius', title: coach.full_name
                   %br
                   %br
@@ -112,7 +112,7 @@
         %ul.small-block-grid-2.medium-block-grid-4
           - @event.organisers.each do |organiser|
             %li.text-center
-              =link_to twitter_url_for(organiser.twitter) do
+              =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
                 =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
                 %br
                 %br
