--- a/app/views/members/_avatar_listing.html.haml
+++ b/app/views/members/_avatar_listing.html.haml
@@ -1,7 +1,7 @@
 %ul.small-block-grid-2.medium-block-grid-4
   - member.each do |member|
     %li.text-center
-      =link_to twitter_url_for(member.twitter) do
+      =link_to twitter_url_for(member.twitter), class: 'user-link' do
         =image_tag member.avatar(56), class: 'th radius', title: member.full_name
       %br
       %br
