--- a/app/views/meetings/_meeting.html.haml
+++ b/app/views/meetings/_meeting.html.haml
@@ -23,7 +23,7 @@
           - if meeting.organisers.any?
             .organisers
               - meeting.organisers.each do |organiser|
-                =link_to twitter_url_for(organiser.twitter) do
+                =link_to twitter_url_for(organiser.twitter), class: 'user-link' do
                   =image_tag organiser.avatar(26), class: 'th radius', title: organiser.full_name
 
         .medium-6.columns#sponsors
