Use Foundation grid correctly '.columns' -> '.large-12.columns'

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,6 +1,6 @@
 .stripe.reverse
   .row
-    .columns
+    .large-12.columns
       %h1
         = @course.title
       .h3.subheader #{humanize_date_with_time(@course.date_and_time)}
