--- a/app/views/coach/feedback/index.html.haml
+++ b/app/views/coach/feedback/index.html.haml
@@ -1,5 +1,5 @@
 = render partial: 'shared/title', locals: { title: "Workshop feedback", date: nil }
-%section#admin#banner
+%section#admin
   .row
     .large-12.columns
     %p Feedback related to your coaching sessions is highlighted.
