--- a/app/views/subscriptions/index.html.haml
+++ b/app/views/subscriptions/index.html.haml
@@ -1,5 +1,5 @@
 = render partial: 'shared/title', locals: { title: "Subscriptions", date: nil }
-%section#banner
+%section
 .row
   .large-12.columns
     %p.lead Subscriptions control the emails you receive. For example if you would like to receive student invitations for the Brighton and West London workshops then select Brighton (Students) and West London (Students).
