--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,11 +17,6 @@
   padding-bottom: 20px;
 }
 
-#banner,
-#chapter {
-  margin-top: 30px;
-}
-
 .brand {
   line-height: 5.8rem;
   padding: 0 0.75em;
@@ -136,6 +131,12 @@ u {
 
 .stripe {
   padding: 20px 0;
+}
+
+@media (min-width: 40em) {
+  .stripe {
+    padding: 30px 0;
+  }
 }
 
 .stripe:not(.reverse):nth-child(even) {
