--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1325,19 +1325,9 @@ table thead tr td {
   border-bottom: 1px solid rgb(34, 34, 34);
 }
 
-.top-bar-section li:not(.has-form):hover a span  {
-  text-decoration: underline;
-  text-decoration-skip: ink;
-}
-
-.top-bar-section li:not(.has-form):hover a .highlight  {
-  text-decoration-color: currentColor;
-}
-
 .highlight {
   color: $secondary-color;
 }
-
 
 blockquote {
   display:block;
@@ -1373,8 +1363,21 @@ blockquote em {
   font-style: italic;
 }
 
+$link-color: #005395;
+
 a {
-  border-bottom: 1px dashed $secondary-color;
+  font-weight: 600;
+  color: #005395;
+}
+
+.top-bar-section ul li > a {
+  color: $link-color;
+  font-weight: 600;
+}
+
+.top-bar-section li.active:not(.has-form) a:not(.button),
+.top-bar-section ul li.active > a {
+  color: $black;
 }
 
 .top-bar a,
