--- a/app/assets/stylesheets/partials/_colors.sass
+++ b/app/assets/stylesheets/partials/_colors.sass
@@ -6,7 +6,7 @@ $gray-title-button: #f5f5f5
 $red: #C40233
 $lightgreen: #69b986
 $lightyellow: #f8d773
-$white: #ffffff
+$white: #fefefe
 
 $become-member-grey: #5e5a6b
 $become-member-white: #f1f1f3
