--- a/app/assets/stylesheets/partials/_hero.scss
+++ b/app/assets/stylesheets/partials/_hero.scss
@@ -4,9 +4,9 @@ section.hero.opaque {
   .lead,
   h2 {
     color: $white;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.65);
     margin-bottom: 0;
-    padding: 20px;
+    padding: 0.75em 1em;
   }
 }
 
