--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -18,8 +18,7 @@
 }
 
 .brand {
-  line-height: 5.8rem;
-  padding: 0 0.75em;
+  padding: 1.35em 0.75em;
 }
 
 nav a.menu {
@@ -130,13 +129,7 @@ u {
 }
 
 .stripe {
-  padding: 20px 0;
-}
-
-@media (min-width: 40em) {
-  .stripe {
-    padding: 30px 0;
-  }
+  padding: 30px 0;
 }
 
 .stripe:not(.reverse):nth-child(even) {
