--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -4,7 +4,7 @@
       %h2 Frequently Asked Questions
 .stripe.reverse
   .row
-    .large-12.columns
+    .large-8.large-offset-2.columns
       %dl
         %dt= t('faq.payment.q')
         %dd
