add company number to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -29,3 +29,7 @@
 
     .large-3.columns
       = render partial: 'shared/social_media'
+  .row
+    .large-12.columns
+      %p.registration
+        Registered UK company number: 10791813
