--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -1,6 +1,6 @@
 footer {
   background-color: $primary-color;
-  padding: 60px 0;
+  padding: 50px 0;
 
   a {
     color: $white;
@@ -9,6 +9,13 @@ footer {
       color: $secondary-color;
     }
   }
+  .registration {
+    color: $white;
+    font-size: 0.75rem;
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+
 
   .social-media a {
     border-bottom: none;
