--- a/app/views/dashboard/participant_guide.html.haml
+++ b/app/views/dashboard/participant_guide.html.haml
@@ -59,3 +59,7 @@
       %p If you are unsure whether you are eligible, please get in touch. If we determine that you have signed up and do not belong to an eligible group, we will permanently suspend your student invitations without warning.
 
       %p We take this issue very seriously, and we appreciate your cooperation and understanding.
+
+      %h3#disability Students with Disability
+
+      %p We want to ensure that our workshops are as accessible as possible. If you are disabled and are unsure about whether our venues can cater to your needs, we encourage you to please get in touch with us at <a href="mailto:hello@codebar.io">hello@codebar.io</a> and we will do what we can to accommodate you.
