Add disability to the in-page nav

--- a/app/views/dashboard/participant_guide.html.haml
+++ b/app/views/dashboard/participant_guide.html.haml
@@ -2,7 +2,7 @@
   .row
     .large-12.columns
       %h2 Student Guide
-      %p <a href='#attendance'>Attendance Policy</a> | <a href='#eligibility'>Eligibility Criteria</a>
+      %p <a href='#attendance'>Attendance Policy</a> | <a href='#eligibility'>Eligibility Criteria</a> | <a href='#disability'>Students with Disability</a>
 
 .stripe.reverse
   .row
