Updates CSS to correspond to the updated classes

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1377,7 +1377,7 @@ a {
   border-bottom: 1px dashed $secondary-color;
 }
 
-body.dashboard.faq dl dt {
+body.dashboard-faq dl dt {
 	font-size: 1.25rem;
 	padding-top: 0.75rem;
 }
