--- a/app/views/jobs/new.html.haml
+++ b/app/views/jobs/new.html.haml
@@ -18,7 +18,7 @@
             %input#short{type: 'checkbox'}
             %label{for: 'short'} It's short and to the point
       %p
-        A suggested donation of <b>£25</b> would be appreciated to list a job (all donations go towards sustaining codebar and running our events).
+        A minimum payment of <b>£25</b> would be appreciated to list a job (all donations go towards sustaining codebar and running our events).
       =link_to "Make payment", "https://codebar.io/donations/new", class: 'button tiny'
       %br
       %small *Submitted jobs will be visible to our members once they've been reviewed and approved by an organiser.
