--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -1,6 +1,6 @@
 .stripe.reverse#banner
   .row
-    .large-12.columns
+    .large-8.large-offset-2.columns
       %h2 Frequently Asked Questions
 .stripe.reverse
   .row
