--- a/app/views/shared/_social_media.html.haml
+++ b/app/views/shared/_social_media.html.haml
@@ -1,4 +1,9 @@
 %ul.inline-list.right.social-media
+  %li.slack
+    = link_to 'https://codebar-slack.herokuapp.com' do
+      %span.fa-stack.fa-lg
+        %i.fa.fa-square.fa-stack-2x
+        %i.fa.fa-slack.fa-stack-1x.fa-inverse
   %li.github
     = link_to 'https://github.com/codebar' do
       %span.fa-stack.fa-lg
