--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -32,6 +32,6 @@
           - if event.sponsors.any?
             - event.sponsors.each do |sponsor|
               = link_to sponsor.website do
-                = image_tag sponsor.avatar, class: 'sponsor'
+                = image_tag sponsor.avatar.thumb, class: 'sponsor'
 
       %br
