added meta data and images of app icons

--- a/app/views/layouts/_meta.html.haml
+++ b/app/views/layouts/_meta.html.haml
@@ -11,3 +11,6 @@
 %meta{ property: 'og:title', content: 'codebar' }
 %meta{ property: 'og:description', content: 'Making tech more diverse and welcoming by bringing people together and helping teach programming skills.' }
 %meta{ name: 'description', content: 'Making tech more diverse and welcoming by bringing people together and helping teach programming skills.' }
+%meta{ rel: 'icon', sizes: '196x196', href: 'https://codebar.io/images/Icon-196.png'}
+%meta{ rel: 'icon', sizes: '128x128', href: 'https://codebar.io/images/Icon-128.png'}
+%meta{ rel: 'apple-touch-icon', sizes: '128x128', href: 'https://codebar.io/images/Icon-128.png'}
