--- a/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
+++ b/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
@@ -32,7 +32,7 @@
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date_with_time(@meeting.date_and_time)}
+                  %small #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
                   %br
@@ -53,4 +53,3 @@
         .content
           = render partial: 'shared_mailers/social'
       %td
-
