--- a/app/views/meeting_invitation_mailer/attending.html.haml
+++ b/app/views/meeting_invitation_mailer/attending.html.haml
@@ -14,7 +14,7 @@
               %td
                 %h3 Hi, #{@member.name}
                 %p.lead
-                  You're confirmed for the next codebar Monthly! 
+                  You're confirmed for the next codebar Monthly!
                 %h4
                   Agenda
                 %p
@@ -32,7 +32,7 @@
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date_with_time(@meeting.date_and_time)}
+                  %small #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
                   %br
@@ -53,4 +53,3 @@
         .content
           = render partial: 'shared_mailers/social'
       %td
-
