--- a/app/views/meeting_invitation_mailer/invite.html.haml
+++ b/app/views/meeting_invitation_mailer/invite.html.haml
@@ -30,7 +30,7 @@
               %td
                 %h4
                   Details
-                %small #{humanize_date_with_time(@meeting.date_and_time)}
+                %small #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
                   %br
