--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -4,7 +4,7 @@
       %h2
         =@meeting.name
       %h3
-        %small=humanize_date_with_time(@meeting.date_and_time)
+        %small=humanize_date(@meeting.date_and_time, with_time: true)
 
   .row
     .medium-4.columns#host
