--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -4,7 +4,7 @@
       %h2
         = @course.title
         %br
-        %small #{humanize_date_with_time(@course.date_and_time)}
+        %small #{humanize_date(@course.date_and_time, with_time: true)}
       - if @course.date_and_time.past?
         %label.label.warning This event has already taken place.
 
