--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -25,7 +25,7 @@
                     %br
                     - if invitation.parent.present?
                       %small.subheader #{invitation.parent.chapter.name} Group: #{invitation.role.pluralize}
-                      .date #{humanize_date_with_time(invitation.parent.date_and_time, invitation.parent.time)}
+                      .date #{humanize_date(invitation.parent.date_and_time, with_time: true)}
                   %br
                   - if invitation.is_a? SessionInvitation
                     =link_to attendance_status(invitation), invitation_path(invitation), class: "button round expand"
@@ -51,6 +51,6 @@
                     %br
                     - if invitation.parent.present?
                       %small.subheader #{invitation.parent.chapter.name} Group: #{invitation.role.pluralize}
-                      .date #{humanize_date_with_time(invitation.parent.date_and_time, invitation.parent.time)}
+                      .date #{humanize_date(invitation.parent.date_and_time, with_time: true)}
                   %br
                   =link_to "View", invitation_path(invitation), class: "button round expand"
