Adds accessibility information field to sponsor form

--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -16,6 +16,11 @@
         = f.input :seats, label: 'Student Spots'
       .large-3.columns
         = f.input :number_of_coaches, label: 'Coaches Spots'
+
+  .row
+    .large-6.columns
+      = f.input :accessibility_info, label: 'Accessibility information'
+
   .row
     .large-6.columns
       .panel
