Remove redundant `.eql?(true)`

--- a/app/views/members/_avatar_listing.html.haml
+++ b/app/views/members/_avatar_listing.html.haml
@@ -6,5 +6,5 @@
       %br
       %br
       = member.full_name
-      - if show_info and show_info.eql?(true)
+      - if show_info
         = member.mobile
