--- a/app/views/meetings/_meeting_actions.html.haml
+++ b/app/views/meetings/_meeting_actions.html.haml
@@ -23,7 +23,7 @@
 
     - elsif !@meeting.not_full
       %h5 This event is now full.
-      %strong To join the waitlist, please <a href="mailto:monthlies@codebar.io">email us</a>.
+      %strong To join the waitlist, please <a href="https://airtable.com/shrWPRlXDgjDGSYk6">fill in your details here</a>.
 
     - else
       %h5 This event is not open for RSVP.
