--- a/app/views/admin/workshops/index.html.haml
+++ b/app/views/admin/workshops/index.html.haml
@@ -18,7 +18,7 @@
           %tr
             %td
               = link_to admin_workshop_path(workshop) do
-                = humanize_date_with_time(workshop.date_and_time, workshop.time)
+                = humanize_date(workshop.date_and_time, with_time: true)
             %td
               = workshop.invitations.accepted.count
             %td
