[Accessibility] Links with no text #587 - add text to social media icon links and hide using sr-only css - add aria-hidden to additional text - change hamburger menu to menu button

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,9 +5,11 @@
         =link_to root_path do
           .brand
             = image_tag("logo.png", alt: "codebar logo", size: "148x40")
-      %li.toggle-topbar.menu-icon
+      %li.toggle-topbar
         = link_to '#' do
-          .fa.fa-stack-2x.fa-list
+          .button
+            %span.fa.fa-bars{"aria-hidden" => "true"}
+            %span Menu
 
     %section.top-bar-section
       %ul.right
