Adds unsubscribe partial to meeting invitation email

--- a/app/views/meeting_invitation_mailer/invite.html.haml
+++ b/app/views/meeting_invitation_mailer/invite.html.haml
@@ -51,3 +51,4 @@
         .content
           = render partial: 'shared_mailers/social'
       %td
+        = render partial: 'shared_mailers/unsubscribe', locals: { chapter: @meeting.chapters }
