--- a/app/views/workshop_invitation_mailer/attending.html.haml
+++ b/app/views/workshop_invitation_mailer/attending.html.haml
@@ -42,9 +42,9 @@
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date(@session.date_and_time, with_time: true)}
+                  %small #{humanize_date(@workshop.date_and_time, with_time: true)}
                 %p
-                  #{@session.host.name}
+                  #{@workshop.host.name}
                   %br
                   #{@host_address.to_html}
                 = link_to "Update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
