--- a/app/views/workshop_invitation_mailer/attending_reminder.html.haml
+++ b/app/views/workshop_invitation_mailer/attending_reminder.html.haml
@@ -19,20 +19,20 @@
                   If you can no longer make it, please cancel your invitation <strong>before 15:00</strong> on the day of the event.
                   <a href="https://codebar.io/student-guide#attendance">We have a three-strikes attendance policy for no-shows.</a>
                 %p
-                  <strong>Please do not turn up before #{(@session.date_and_time).strftime("%H:%M")}.</strong> If you are early, please wait in a nearby cafe.
+                  <strong>Please do not turn up before #{(@workshop.date_and_time).strftime("%H:%M")}.</strong> If you are early, please wait in a nearby cafe.
 
 
         .content
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@session.host.avatar, alt: @session.host.name)
+                =image_tag(@workshop.host.avatar, alt: @workshop.host.name)
               %td
                 %h4
                   Workshop
-                  %small= humanize_date(@session.date_and_time, with_time: true)
+                  %small= humanize_date(@workshop.date_and_time, with_time: true)
                 %p
-                  #{@session.host.name}
+                  #{@workshop.host.name}
                   %br
                   #{@host_address.to_html}
                 = link_to "Update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
