--- a/app/views/workshop_invitation_mailer/invite_coach.html.haml
+++ b/app/views/workshop_invitation_mailer/invite_coach.html.haml
@@ -14,7 +14,7 @@
               %td
                 %h3 Hi #{@member.name}
                 %p.lead
-                  Invites for our next workshop are now open and we are looking for coaches. The workshop that will take place on #{humanize_date(@session.date_and_time, with_time: true)}.
+                  Invites for our next workshop are now open and we are looking for coaches. The workshop that will take place on #{humanize_date(@workshop.date_and_time, with_time: true)}.
 
                 %p At the workshop you will be helping students as they work their way through one of our tutorials or a personal project they need help. Don't worry we'll only match you with someone who you'll be able to help.
 
@@ -30,14 +30,14 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@session.host.avatar, alt: @session.host.name)
+                =image_tag(@workshop.host.avatar, alt: @workshop.host.name)
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date(@session.date_and_time, with_time: true)}
+                  %small #{humanize_date(@workshop.date_and_time, with_time: true)}
                 %p
                   %b Venue
-                  #{@session.host.name}
+                  #{@workshop.host.name}
                 =link_to "View invitation and RSVP", full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
