--- a/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
+++ b/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
@@ -24,7 +24,7 @@
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date(@session.date_and_time, with_time: true)}
+                  %small #{humanize_date(@workshop.date_and_time, with_time: true)}
                 %p
                   #{@workshop.venue.name}
                   %br
