--- a/app/views/workshop_invitation_mailer/waiting_list_reminder.html.haml
+++ b/app/views/workshop_invitation_mailer/waiting_list_reminder.html.haml
@@ -14,7 +14,7 @@
               %td
                 %h3 Hi, #{@member.name}
                 %p.lead
-                  This is a quick email to remind you that you're on the waiting list for the workshop on #{humanize_date(@session.date_and_time, with_time: true)}.
+                  This is a quick email to remind you that you're on the waiting list for the workshop on #{humanize_date(@workshop.date_and_time, with_time: true)}.
                 %p
                   If an attendee drops out, the next person on the waiting list will automatically get their place.
                   We'll email you if this happens.
@@ -30,13 +30,13 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@session.host.avatar, alt: @session.host.name)
+                =image_tag(@workshop.host.avatar, alt: @workshop.host.name)
               %td
                 %h4
                   Workshop
-                  %small= humanize_date(@session.date_and_time, with_time: true)
+                  %small= humanize_date(@workshop.date_and_time, with_time: true)
                 %p
-                  #{@session.host.name}
+                  #{@workshop.host.name}
                   %br
                   #{@host_address.to_html}
                 = link_to "Update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
