Move helpers to presenters where appropriate

--- a/app/views/invitations/index.html.haml
+++ b/app/views/invitations/index.html.haml
@@ -28,9 +28,9 @@
                       .date #{humanize_date(invitation.parent.date_and_time, with_time: true)}
                   %br
                   - if invitation.is_a? SessionInvitation
-                    =link_to attendance_status(invitation), invitation_path(invitation), class: "button round expand"
+                    =link_to invitation.attendance_status, invitation_path(invitation), class: "button round expand"
                   - elsif invitation.is_a? CourseInvitation
-                    =link_to attendance_status(invitation), course_invitation_path(invitation), class: "button round expand"
+                    =link_to invitation.attendance_status, course_invitation_path(invitation), class: "button round expand"
       - elsif @upcoming_session
         %em You have no invitations. If you just signed up you should receive one soon.
       - else
