Remove Draper and move decorators to presenters

--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -8,14 +8,14 @@
   .row
     .large-3.columns
       %h4 Address
-      = AddressDecorator.new(@sponsor.address).to_html
+      = AddressPresenter.new(@sponsor.address).to_html
 
     .large-3.columns
       %h4 Logo
       = image_tag(@sponsor.avatar, alt: @sponsor.name)
     .large-3.columns
       %h4 Contacts
-      = SponsorDecorator.new(@sponsor).contact_info
+      = SponsorPresenter.new(@sponsor).contact_info
     .large-3.columns
       %h4 Sponsored
       %ul.no-bullet
