--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -15,14 +15,14 @@
       %hr
       .large-3.columns
         = sponsor.name
-        %p= AddressDecorator.new(sponsor.address).to_html
+        %p= AddressPresenter.new(sponsor.address).to_html
         %p
           %em Sponsored #{sponsor.workshop_sponsors.count} sessions
 
       .large-4.columns
         = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
       .large-3.columns
-        %p= SponsorDecorator.new(sponsor).contact_info
+        %p= SponsorPresenter.new(sponsor).contact_info
 
       .large-1.columns
         = link_to "Edit", edit_admin_sponsor_path(sponsor), class: 'button round small'
