some sponsor page styles

--- a/app/views/sponsors/index.html.haml
+++ b/app/views/sponsors/index.html.haml
@@ -17,10 +17,11 @@
     .stripe.reverse
       .row
         .large-12.columns
-          %h3 #{level == 'standard' ? 'And thanks to our other ' : level.humanize} sponsors
+          %h3.sponsor-header-margin.text-center 
+            #{level == 'standard' ? 'And thanks to our other ' : level.humanize} sponsors
       .row
         .large-12.columns
-          %ul.small-block-grid-2.medium-block-grid-3.large-block-grid-4#sponsors
+          %ul.small-block-grid-2.medium-block-grid-3.large-block-grid-4
             - @sponsor_levels[level].each do |sponsor|
               %li.text-center
                 = link_to image_tag(sponsor.avatar, class: "sponsor-logo-image", alt: sponsor.name), sponsor.website
