--- a/app/views/donations/new.html.haml
+++ b/app/views/donations/new.html.haml
@@ -30,7 +30,7 @@
     %h3 A big thank you to some of our sponsors
   .row.sponsor-row
     .medium-2.small-4.columns
-      = image_tag("sponsors/8th-Light.png", class: "small-image", alt: "codebar logo")
+      = image_tag("sponsors/8th-Light.png", class: "small-image", alt: "8th Light")
     .medium-2.small-4.columns
       =image_tag("sponsors/bloomberg.png", alt: "Bloomberg")
     .medium-2.small-4.columns
