--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -41,8 +41,9 @@
             %li
               .row
                 .large-5.columns
-                  =link_to sponsor.website do
-                    =image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
+                  .sponsor-image
+                    =link_to sponsor.website do
+                      =image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
             %br
 
   .stripe.reverse
