--- a/app/views/dashboard/wall_of_fame.html.haml
+++ b/app/views/dashboard/wall_of_fame.html.haml
@@ -3,9 +3,19 @@
     .large-12.columns
       %h2 Coaches
       %p.lead
-        Here you can find a list of the #{ @coaches.total_entries } volunteers who have coached at codebar.
+        Here you can find a list of the #{ @coaches_count } volunteers who have coached at codebar.
 
       %p.lead
         If you’d like to start coaching at a workshop near you, read our #{ link_to "teaching guide", teaching_guide_path } and then #{ link_to "sign up", new_member_path } as a coach. It’s easier than you think!
 
-= render partial: '/coach/coach', locals: { coaches: @coaches }
+  .row
+    .large-12.columns
+      .right
+        %ul.inline-list
+          - Time.zone.now.year.downto(2013).each do |year|
+            %li
+              - if page_year?(year)
+                %strong.label.primary= year
+              - else
+                = link_to year, coaches_path(year: year), class: 'label success'
+  = render partial: '/coach/coach', locals: { coaches: @coaches }
