add feature spec for announcements
Resolve bullet query warnings

--- a/app/views/admin/announcements/index.html.haml
+++ b/app/views/admin/announcements/index.html.haml
@@ -23,4 +23,5 @@
                   %li
                     = group.to_s
             %td
-              =l(announcement.expires_at, format: :date)
+              - if announcement.expires_at.present?
+                =l(announcement.expires_at, format: :date)
