ensure chapter is present before performing date validation (As It causes app to crash since timezone is on chapter)
- `includes(:member)` on attendances as per Buller error
- Restrict access to non valid route /admin/workshops
- improve test coverage

--- a/app/views/admin/workshops/index.html.haml
+++ b/app/views/admin/workshops/index.html.haml
@@ -14,7 +14,7 @@
         %td
 
       %tbody
-        - @chapter.workshops.each do |workshop|
+        - @workshops.each do |workshop|
           %tr
             %td
               = link_to admin_workshop_path(workshop) do
