add tests for MeetingInvitationController
- Fix issue where organiser is unable to RSVP member whose attendance was set to false
- Permit params
- extract messages to locale

--- a/app/views/admin/meetings/_invitation_management.html.haml
+++ b/app/views/admin/meetings/_invitation_management.html.haml
@@ -31,7 +31,7 @@
                 = link_to '', admin_meeting_invitation_path(invitation, attendance_status: true, attended: false), class: 'fa fa-check-square-o', method: :put
               - else
                 = link_to '', admin_meeting_invitation_path(invitation, attendance_status: true, attended: true),
-                class: 'fa fa-square-o',
+                class: 'fa fa-square-o verify-attendance',
                 method: :put
 
             - else
