Improve Jobs UI
- extracts text to locale
- improves jobs index, show and pending pages
- improves specs

--- a/app/assets/stylesheets/partials/_jobs.scss
+++ b/app/assets/stylesheets/partials/_jobs.scss
@@ -3,3 +3,29 @@
     color: $white;
   }
 }
+
+ul.jobs {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+
+  li.job {
+    border-bottom: 1px solid #dee0e2;
+    padding: 10px 0 5px;
+    margin: 5px 0;
+
+    dl {
+      font-size: '0.9em';
+
+      dt {
+        color: #6f777b;
+        display: inline-block;
+      }
+      dd {
+        display: inline-block;
+        width: 20%;
+      }
+    }
+  }
+}
