--- a/app/views/admin/jobs/index.html.haml
+++ b/app/views/admin/jobs/index.html.haml
@@ -9,7 +9,7 @@
     .large-12.columns
       - if @jobs.none?
         %p
-          there are no jobs available at the moment
+          There are no jobs pending approval.
 
       - else
         %dl
