--- a/app/views/jobs/pending.html.haml
+++ b/app/views/jobs/pending.html.haml
@@ -1,20 +1,18 @@
-- unless @jobs.any?
+.stripe.reverse
   .row
     .large-12.columns
-      %p
-        There are no jobs available at the moment
+      %h1=t('jobs.pending.title')
+      %p.lead
+        - if @jobs.any?
+          =t('jobs.pending.description', count: @jobs.count)
+        - else
+          =t('jobs.pending.none')
+        %br
+        %small #{link_to('Click here', new_job_path)} if you would like to post a new job.
 
-- @jobs.each do |job|
-  .row
-    .large-12.columns
-      .panel.callout
-        %h4
-          =link_to job_preview_path(job) do
-            #{job.title} at #{job.company}
-            %small.fa.fa-map-marker
-              = job.location
-        =link_to job_preview_path(job) do
-          %p
-            =truncate(sanitize(dot_markdown(job.description), tags: { }), length: 200)
-        %p.text-right
-          Posted by #{job.created_by.full_name} on #{l(job.created_at, format: :date)}
+  - if @jobs.any?
+    .row
+      .large-12.columns
+        %ul.jobs
+          - @jobs.each do |job|
+            = render partial: 'job_preview', locals: { job: job }
