Move member/job relevant actions to member/jobs controller Member can find any jobs they listed under /my/jobs and create jobs at /my/jobs/new

--- a/app/views/jobs/_show.html.haml
+++ b/app/views/jobs/_show.html.haml
@@ -25,6 +25,11 @@
         %strong Closing date
         %br
         #{I18n.l(@job.expiry_date, format: :date)}
+      -if @job.email?
+        %p
+          %strong Contact email
+          %br
+          =@job.email
       %p
         %strong Posted by
         %br
