--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -8,7 +8,7 @@
         - else
           =t('jobs.index.none')
         %br
-        %small #{link_to('Click here', new_job_path)} if you would like to post a new job.
+        %small #{link_to('Click here', new_member_job_path)} if you would like to post a new job.
   - if @jobs.any?
     .row
       .large-12.columns
