--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -6,8 +6,8 @@
       = render 'layouts/organiser_menu'
     %li
       %label Portal
-      %li= link_to 'Jobs',  jobs_path
-      %li= link_to 'List a job',  new_job_path
+      %li= link_to 'My Jobs',  member_jobs_path
+      %li= link_to 'List a job',  new_member_job_path
     %li
       %label Account
     %li= link_to 'My Profile', profile_path
