--- a/app/views/member/jobs/_job_preview.html.haml
+++ b/app/views/member/jobs/_job_preview.html.haml
@@ -1,5 +1,5 @@
 %li.job
-  %h4= link_to job.title, job_preview_path(job)
+  %h4= link_to job.title, member_job_preview_path(job)
   %dl
     %dt= t('job.company')
     %dd= job.company
